{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 114,
  "lineage": "9fec3dfc-2c0f-331c-8dea-9ba270885930",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "linux_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-09d0c9a85bf1b9ea7",
            "arn": "arn:aws:ec2:eu-west-1:967310490978:instance/i-09825b7faf8cf5f5b",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "Mo_Wazuh_Lab-ssm-profile",
            "id": "i-09825b7faf8cf5f5b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "mo-wazuh-lab-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-027c265cd4979d1dd"
              }
            ],
            "primary_network_interface_id": "eni-027c265cd4979d1dd",
            "private_dns": "ip-10-20-1-98.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.1.98",
            "public_dns": "ec2-54-74-35-227.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.74.35.227",
            "region": "eu-west-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "Project": "Mo_Wazuh_Lab"
                },
                "throughput": 125,
                "volume_id": "vol-0eed43358be16edf3",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00e84c31b0ae62cb0",
            "tags": {
              "Name": "Mo_Wazuh_Lab-linux-endpoint",
              "Role": "linux-endpoint"
            },
            "tags_all": {
              "Name": "Mo_Wazuh_Lab-linux-endpoint",
              "Project": "Mo_Wazuh_Lab",
              "Role": "linux-endpoint"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07500b8a508516ccf"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "967310490978",
            "id": "i-09825b7faf8cf5f5b",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_profile",
            "aws_iam_role.ssm_role",
            "aws_key_pair.this",
            "aws_security_group.endpoints",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_ami.ubuntu",
            "data.aws_iam_policy_document.ec2_assume_role"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wazuh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-09d0c9a85bf1b9ea7",
            "arn": "arn:aws:ec2:eu-west-1:967310490978:instance/i-0ba8cd85e82f63861",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "Mo_Wazuh_Lab-ssm-profile",
            "id": "i-0ba8cd85e82f63861",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c7i-flex.large",
            "ipv6_address_count": 0,
            "key_name": "mo-wazuh-lab-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0868cfcde053d324a"
              }
            ],
            "primary_network_interface_id": "eni-0868cfcde053d324a",
            "private_dns": "ip-10-20-1-235.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.1.235",
            "public_dns": "ec2-63-33-203-1.eu-west-1.compute.amazonaws.com",
            "public_ip": "63.33.203.1",
            "region": "eu-west-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "Project": "Mo_Wazuh_Lab"
                },
                "throughput": 125,
                "volume_id": "vol-01423253226076e92",
                "volume_size": 40,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00e84c31b0ae62cb0",
            "tags": {
              "Name": "Mo_Wazuh_Lab-wazuh-server",
              "Role": "wazuh"
            },
            "tags_all": {
              "Name": "Mo_Wazuh_Lab-wazuh-server",
              "Project": "Mo_Wazuh_Lab",
              "Role": "wazuh"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-012bb33fa6ef51704"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "967310490978",
            "id": "i-0ba8cd85e82f63861",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_profile",
            "aws_iam_role.ssm_role",
            "aws_key_pair.this",
            "aws_security_group.endpoints",
            "aws_security_group.wazuh",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_ami.ubuntu",
            "data.aws_iam_policy_document.ec2_assume_role"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "windows_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0e858c92e3cf6bbcf",
            "arn": "arn:aws:ec2:eu-west-1:967310490978:instance/i-0a6870d3c6118fae4",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "Mo_Wazuh_Lab-ssm-profile",
            "id": "i-0a6870d3c6118fae4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "mo-wazuh-lab-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0f9a30cf0f994397f"
              }
            ],
            "primary_network_interface_id": "eni-0f9a30cf0f994397f",
            "private_dns": "ip-10-20-1-94.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.1.94",
            "public_dns": "ec2-54-194-38-216.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.194.38.216",
            "region": "eu-west-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "Project": "Mo_Wazuh_Lab"
                },
                "throughput": 125,
                "volume_id": "vol-071c49673f7673e75",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00e84c31b0ae62cb0",
            "tags": {
              "Name": "Mo_Wazuh_Lab-windows-endpoint",
              "Role": "windows-endpoint"
            },
            "tags_all": {
              "Name": "Mo_Wazuh_Lab-windows-endpoint",
              "Project": "Mo_Wazuh_Lab",
              "Role": "windows-endpoint"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07500b8a508516ccf"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "967310490978",
            "id": "i-0a6870d3c6118fae4",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_profile",
            "aws_iam_role.ssm_role",
            "aws_key_pair.this",
            "aws_security_group.endpoints",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_ami.windows",
            "data.aws_iam_policy_document.ec2_assume_role"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:967310490978:internet-gateway/igw-0a6924dbe42083e5d",
            "id": "igw-0a6924dbe42083e5d",
            "owner_id": "967310490978",
            "region": "eu-west-1",
            "tags": {
              "Name": "Mo_Wazuh_Lab-igw"
            },
            "tags_all": {
              "Name": "Mo_Wazuh_Lab-igw",
              "Project": "Mo_Wazuh_Lab"
            },
            "vpc_id": "vpc-0e96c91061ccde9c8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:967310490978:route-table/rtb-0d49d859d57f2387c",
            "id": "rtb-0d49d859d57f2387c",
            "owner_id": "967310490978",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a6924dbe42083e5d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Mo_Wazuh_Lab-public-rt"
            },
            "tags_all": {
              "Name": "Mo_Wazuh_Lab-public-rt",
              "Project": "Mo_Wazuh_Lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e96c91061ccde9c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "967310490978",
            "id": "rtb-0d49d859d57f2387c",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cdd1484cf3fe4e8a",
            "region": "eu-west-1",
            "route_table_id": "rtb-0d49d859d57f2387c",
            "subnet_id": "subnet-00e84c31b0ae62cb0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:967310490978:security-group/sg-07500b8a508516ccf",
            "description": "Endpoints SG - no inbound; outbound allowed",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound (updates + SSM + downloads)",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07500b8a508516ccf",
            "ingress": [],
            "name": "Mo_Wazuh_Lab-endpoints-sg",
            "name_prefix": "",
            "owner_id": "967310490978",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Mo_Wazuh_Lab-endpoints-sg"
            },
            "tags_all": {
              "Name": "Mo_Wazuh_Lab-endpoints-sg",
              "Project": "Mo_Wazuh_Lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e96c91061ccde9c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "967310490978",
            "id": "sg-07500b8a508516ccf",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wazuh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:967310490978:security-group/sg-012bb33fa6ef51704",
            "description": "Wazuh SG - allow agent ports from endpoints SG only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound (updates + Docker pulls + SSM)",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-012bb33fa6ef51704",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Wazuh agents (TCP 1514) from endpoints SG",
                "from_port": 1514,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07500b8a508516ccf"
                ],
                "self": false,
                "to_port": 1514
              },
              {
                "cidr_blocks": [],
                "description": "Wazuh agents (UDP 1514) from endpoints SG",
                "from_port": 1514,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-07500b8a508516ccf"
                ],
                "self": false,
                "to_port": 1514
              },
              {
                "cidr_blocks": [],
                "description": "Wazuh registration/service (TCP 1515) from endpoints SG",
                "from_port": 1515,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07500b8a508516ccf"
                ],
                "self": false,
                "to_port": 1515
              }
            ],
            "name": "Mo_Wazuh_Lab-wazuh-sg",
            "name_prefix": "",
            "owner_id": "967310490978",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Mo_Wazuh_Lab-wazuh-sg"
            },
            "tags_all": {
              "Name": "Mo_Wazuh_Lab-wazuh-sg",
              "Project": "Mo_Wazuh_Lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e96c91061ccde9c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "967310490978",
            "id": "sg-012bb33fa6ef51704",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_security_group.endpoints",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:967310490978:subnet/subnet-00e84c31b0ae62cb0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e84c31b0ae62cb0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "967310490978",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "Mo_Wazuh_Lab-public-subnet"
            },
            "tags_all": {
              "Name": "Mo_Wazuh_Lab-public-subnet",
              "Project": "Mo_Wazuh_Lab"
            },
            "vpc_id": "vpc-0e96c91061ccde9c8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "967310490978",
            "id": "subnet-00e84c31b0ae62cb0",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:967310490978:vpc/vpc-0e96c91061ccde9c8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-03227d6314c22c6b0",
            "default_route_table_id": "rtb-0ef1639e37b352ca0",
            "default_security_group_id": "sg-0cf85191b0282a837",
            "dhcp_options_id": "dopt-07174b3d0e67d76f7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e96c91061ccde9c8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ef1639e37b352ca0",
            "owner_id": "967310490978",
            "region": "eu-west-1",
            "tags": {
              "Name": "Mo_Wazuh_Lab-vpc"
            },
            "tags_all": {
              "Name": "Mo_Wazuh_Lab-vpc",
              "Project": "Mo_Wazuh_Lab"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "967310490978",
            "id": "vpc-0e96c91061ccde9c8",
            "region": "eu-west-1"
          }
        }
      ]
    }
  ]
}